Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-134756

QJsonValue::fromVariant converts integers incorrectly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.8.4, 6.9.1, 6.10.0 FF
    • 6.8.2
    • Core: Serialization
    • None
    • ALT Regular
    • All
    • 42e0f9811 (dev), a4daf4939 (dev), 895b1c0ab (dev), b75851889 (6.9), d0665d262 (6.9), 469c071d6 (6.9), a7f1ad81e (6.8), a88e522c4 (6.8), ff708351b (6.8), c3bb5906d (tqtc/lts-6.5)

      I have an editable model, which stores its data in entities, containing QVariant, and it has a method, which serializes all data to JSON. Integer values were serialized as strings. After some debugging I found out that my QVariant has QMetaType::Long, which, according to the docs, is not processed. 
      By the way, QVariant::toJsonValue works correctly

        For Gerrit Dashboard: QTBUG-134756
        # Subject Branch Project Status CR V

            thiago Thiago Macieira
            parovoz Andrey Alekseev
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: