QVariant/QMetaType: fix conversions to/from qfloat16

Needed to make some conversions explicit, since you can't assign to a
qfloat16 from double.

[ChangeLog][QtCore][QVariant] Implemented converting of qfloat16 to and
from the other numeric types, text conversions to and from QString and
QByteArray, and conversions to and from QJsonValue and QCborValue. This
should make qfloat16 behave the same as float and double.

Also flip the order of arguments in one of the addComparePairs(): left
side is actual, right side is expected. I noticed on the copy & paste
to do the qfloat16 above it.

Pick-to: 6.8
Task-number: QTBUG-134756
Change-Id: I6a6c469d21746a07c18efffd6b3b961c73c0e2f2
Reviewed-by: Marc Mutz <marc.mutz@qt.io>
(cherry picked from commit a4daf4939644ea3a087a8c03b1ec962e2e4defa8)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>